--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "react-dom": "^15.1.0"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.9.0"
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "gulp": "^3.9.1",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
